--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "promptflowx",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "promptflowx is a simple and powerful tool for building prompt-driven workflows.",
   "repository": {
     "url": "10cl/promptflowx",
@@ -12,7 +12,6 @@
     "dist"
   ],
   "scripts": {
-    "test": "jest",
     "build": "tsc",
     "postbuild": "cp src/index.d.ts dist/index.d.ts",
     "prepublishOnly": "npm run build"
@@ -28,20 +27,15 @@
   "license": "MIT",
   "devDependencies": {
     "promptflow-eval": "1.0.0",
-    "@swc/core": "^1.3.101",
-    "@swc/jest": "^0.2.29",
-    "@types/jest": "^29.5.11",
-    "axios": "^1.6.7",
-    "axios-mock-adapter": "^1.22.0",
-    "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
-    "ts-jest": "^29.1.1",
+    "@swc/core": "^1.3.101",
     "typescript": "^5.3.3",
     "@babel/core": "^7.7.2",
     "@babel/standalone": "^7.18.13",
     "@babel/preset-env": "^7.7.1"
   },
   "dependencies": {
-    "@types/js-yaml": "^4.0.9"
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^20.10.4"
   }
 }
