--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "promptflowx",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "promptflowx is a simple and powerful tool for building prompt-driven workflows.",
   "repository": {
-    "url": "10cl/promptflowx",
+    "url": "git+https://github.com/10cl/promptflowx.git",
     "type": "git"
   },
   "main": "dist/index.js",
@@ -12,6 +12,7 @@
     "dist"
   ],
   "scripts": {
+    "buildIndex": "tsc src/index.ts --declaration",
     "build": "tsc",
     "postbuild": "cp src/index.d.ts dist/index.d.ts",
     "prepublishOnly": "npm run build"
@@ -26,16 +27,25 @@
   "author": "10cl <notice@toscl.com>",
   "license": "MIT",
   "devDependencies": {
-    "promptflow-eval": "1.0.0",
-    "js-yaml": "^4.1.0",
-    "@swc/core": "^1.3.101",
-    "typescript": "^5.3.3",
     "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
     "@babel/standalone": "^7.18.13",
-    "@babel/preset-env": "^7.7.1"
+    "@swc/core": "^1.3.101",
+    "js-yaml": "^4.1.0",
+    "langchain": "^0.1.34",
+    "ofetch": "^1.3.3",
+    "promptflow-eval": "1.0.0",
+
+    "tsx": "^4.15.5",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^20.10.4"
-  }
+    "@types/node": "^20.10.4",
+    "d3-dsv": "^2.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/10cl/promptflowx/issues"
+  },
+  "homepage": "https://github.com/10cl/promptflowx#readme"
 }
