--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "langchain": "^0.1.34",
     "ofetch": "^1.3.3",
     "promptflow-eval": "1.0.0",
-
+    "promptflow-template": "1.0.0",
     "tsx": "^4.15.5",
     "typescript": "^5.3.3"
   },
